# FastAPI-overviews

./: .envrc  README.md  data.py  hello.py  pyproject.toml
src/: main.py
src/data/: creature.py  explorer.py  init.py  user.py
src/db/: cryptid.db
src/fake/: creature.py  explorer.py  user.py
src/service/: creature.py  explorer.py  user.py
src/test/unit/data/: test_creatture.py
src/test/unit/service/: test_creature.py
src/web/: auth.py  creature.py  explorer.py  user.py
