[project]
name = "overview-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpie>=3.2.3",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "requests>=2.31.0",
    "uvicorn>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
